# Datascout-ai_AdvancedRAG

./: .dockerignore  .env.example  .gitignore  .~lock.Sample-AI Overview.docx#  Dockerfile  ISSUES_FIXES.md  README.md  config.yaml  env.example  pyproject.toml
alembic/: env.py
app/: config.py  main.py
app/core/: logging_config.py
app/data/: sample-ai-overview.txt
app/db/: session.py
app/models/: db.py  schemas.py
app/routers/: auth.py  chat.py  upload.py
app/services/: auth_service.py  ingestion.py  rag.py  vector_store.py
app/static/: auth.css  auth.html  auth.js  chat.js  index.html  style.css
planning/: PLAN-backend.md  PLAN-frontend.md  PLAN.md
tests/: test_clarification.py  test_config.py  test_upload.py
