[project]
name = "rag-faiss-chat-with-data"
version = "0.1.0"
description = "Smart Data Assistant - RAG chatbot using FastAPI, pgvector, OpenAI, and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API server
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # Database
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pgvector",
    # Vector stores
    "langchain-community",
    "chromadb",
    # Document parsing
    "liteparse",
    # Web scraping
    "crawl4ai",
    "playwright",
    # HTTP client (API endpoint ingestion)
    "httpx",
    # AI / RAG
    "openai",
    "langchain",
    "langchain-openai",
    "langchain-groq",
    "langchain-text-splitters",
    "tiktoken",
    # Utilities
    "python-dotenv",
    "pyyaml",
    "numpy",
    # WhatsApp integration (optional — only active when WHATSAPP_ENABLED=true)
    "twilio",
    "langchain-postgres>=0.0.17",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    # Phase 7 — LangGraph RAG pipeline
    "langgraph>=0.2.0",
    "rank-bm25>=0.2.2",
    "neo4j>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.scripts]
setup = "playwright install chromium"
test  = "pytest tests/ -v"
